# Universal-Digital-Visual-Follow-Spot-Interfacing-System

./: .gitignore  README.md  adapterconfig.ini  adaptersetup.py  addfixture.py  camui.py  camui.ui  dmx_control_V0.1_ALPHA.py  dmxkeyboard.py  dmxpatchedit.py  dmxsetup.py  dmxtest.py  fixtureprofiles.txt  fixturesetup.py  pyproject.toml  requirements.txt  setup.py  videoclient.py  videoserver.py
Archieved Files/: keyboardtest.py
Config/: Config.ui  EOCdata.ui  addfixtureprofile.py  addfixtureprofile.ui  camerapatch.ui  config.py  configgui.py  fixtureconfig.json  fixturepatch.py  fixturepatch.ui  maingui.py  profiles.json  test.ui
First time setup/: adaptersetup.py  fixturelibrarysetup.py
Setup/: adaptersetup.py  dmxpatchsetup.py  fixturelibrarysetup.py  setup.py
dmxcontrol/: dmx.py  dmxsetup.py  dmxtest.py  pyvenv.cfg  requirements.txt
dmxcontrol/Scripts/: activate  activate.bat
