[tool.poetry]
name = "universal-digital-visual-follow-spot-interfacing-system"
version = "0.0.1a"
description = "Alpha build of GUI with Video Server and testing client"
authors = ["Stavro Purdie <stavropurdie9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
